--- a/网页/shop/index.html
+++ b/网页/shop/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <title>Title</title>
-        <!--<link type="text/css" rel="stylesheet" href="style/reset.css">-->
+        <link type="text/css" rel="stylesheet" href="style/reset.css">
         <link type="text/css" rel="stylesheet" href="style/main.css">
     </head>
 
@@ -35,15 +35,21 @@
             <!-- logoBar -->
             <div class="logoBar">
                 <div class="comwidth">
-                    <div class="logo">
+                    <!--左侧logo-->
+                    <div class="logo fl" >
                         <a href="#"> <img src="img/icon/logo.png"  width="100" height="50" alt="慕课网"> </a>
                     </div>
+                    <!--右侧 输入框 search button-->
+                    <div class="search_box fl ">
+                        <input type="text" class="search_text right">
+                        <input type="button" value="搜索" class="search_btn right">
+                    </div>
+
+                    <div class="shopCar fr">
+                        <span class="shopText">购物车</span>
+                    </div>
+
                 </div>
-
-
-                <input >
-
-
 
             </div>
 
