--- a/网页/snap/jsp/index/setting.html
+++ b/网页/snap/jsp/index/setting.html
@@ -1,10 +1,88 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="keywords" content="mySnap">
+    <meta name="description" lang="en" content="sengled Snap">
 
+
+    <link rel="Bookmark" type="image/x-icon" href="../../images/logosmall.ico">
+    <link rel="icon" type="image/x-icon" href="../../images/logosmall.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../../images/logosmall.ico">
+    <title>setting</title>
+    <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../../css/snap_head.css">
+    <link rel="stylesheet" href="../../css/setting.css">
+    <style type="text/css">.fancybox-margin{margin-right:0px;}</style></head>
+<body>
+<div class="wrapper" style="height: 1000px;overflow: hidden;">
+    <div class="header">
+        <dl>
+            <dt><a href="snap.html"></a></dt>
+            <dd id="nav-div">
+                <ul style="background-position: 500px center;">
+                    <li><a href="snap.html">My snap</a></li>
+                    <li><a href="security.html">Security</a></li>
+                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="snapshot.html">Snap shot</a></li>
+                    <li class="on"><a href="setting.html">Setting</a></li>
+                </ul>
+            </dd>
+        </dl>
+    </div>
+
+    <!--<div class="failure" style="display: none;">-->
+        <!--<div class="oops"></div>-->
+        <!--<div class="line1"></div>-->
+        <!--<div class="line2"></div>-->
+        <!--<div class="line3"></div>-->
+        <!--<div class="try">-->
+            <!--<p>Someing has got wrong,Page not found!</p>-->
+            <!--<p> Please <a href="#">try again</a></p>-->
+        <!--</div>-->
+        <!--<a href="products.html" class="button">Return to sengled</a>-->
+    <!--</div>-->
+
+    <div class="success">
+        <h5>Camera setting</h5>
+        <ul>
+            <li>
+                Night vision
+                <input type="checkbox" class="js-switch" style="display: none;"><span class="switchery" style="box-shadow: rgb(223, 223, 223) 0px 0px 0px 0px inset; border-color: rgb(223, 223, 223); transition: border 0.4s, box-shadow 0.4s;"><small style="left: 0px; transition: left 0.2s;"></small></span>
+            </li>
+            <li>Record<input type="checkbox" class="js-switch" checked="" style="display: none;"><span class="switchery" style="background-color: rgb(243, 152, 93); border-color: rgb(243, 152, 93); box-shadow: rgb(243, 152, 93) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s;"><small style="left: 38px; transition: left 0.2s;"></small></span></li>
+
+        </ul>
+        <ul>
+            <li>Microphone<input type="checkbox" class="js-switch" checked="" style="display: none;"><span class="switchery" style="background-color: rgb(243, 152, 93); border-color: rgb(243, 152, 93); box-shadow: rgb(243, 152, 93) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s;"><small style="left: 38px; transition: left 0.2s;"></small></span></li>
+            <li>Share to Public<input type="checkbox" class="js-switch" checked="" style="display: none;"><span class="switchery" style="background-color: rgb(243, 152, 93); border-color: rgb(243, 152, 93); box-shadow: rgb(243, 152, 93) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s;"><small style="left: 38px; transition: left 0.2s;"></small></span></li>
+        </ul>
+
+        <form action="" method="">
+            <textarea name="say" id="say" value="" placeholder="Say something to you |"></textarea>
+            <a name="sub" type="submit" class="sub"></a>
+            <a class="suc"></a>
+        </form>
+
+        <h5>Wonderful moment setting</h5>
+        <ul>
+            <li>Snapshot<input type="checkbox" class="js-switch" checked="" style="display: none;"><span class="switchery" style="background-color: rgb(243, 152, 93); border-color: rgb(243, 152, 93); box-shadow: rgb(243, 152, 93) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s;"><small style="left: 38px; transition: left 0.2s;"></small></span></li>
+            <li>Notification<input type="checkbox" class="js-switch" checked="" style="display: none;"><span class="switchery" style="background-color: rgb(243, 152, 93); border-color: rgb(243, 152, 93); box-shadow: rgb(243, 152, 93) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s;"><small style="left: 38px; transition: left 0.2s;"></small></span></li>
+        </ul>
+        <h5>Security setting</h5>
+        <ul>
+            <li>Motion Detection<input type="checkbox" class="js-switch" checked="" style="display: none;"><span class="switchery" style="background-color: rgb(243, 152, 93); border-color: rgb(243, 152, 93); box-shadow: rgb(243, 152, 93) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s;"><small style="left: 38px; transition: left 0.2s;"></small></span></li>
+            <li>Notification<input type="checkbox" class="js-switch" checked="" style="display: none;"><span class="switchery" style="background-color: rgb(243, 152, 93); border-color: rgb(243, 152, 93); box-shadow: rgb(243, 152, 93) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s;"><small style="left: 38px; transition: left 0.2s;"></small></span></li>
+        </ul>
+        <ul>New zone 1</ul>
+        <ul>New zone 1</ul>
+    </div>
+</div>
+<script src="../../js/jquery-1.9.1.js"></script>
+<script src="../../js/switchery.min.js"></script>
+<script src="../../js/header_snap.js"></script>
+<script src="../../js/brower.js"></script>
+<script src="../../js/seeting.js"></script>
 </body>
 </html>
