#ionic #snap# UI

--- a/ionic/snap/src/pages/about/about.html
+++ b/ionic/snap/src/pages/about/about.html
@@ -1,11 +1,60 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>About</ion-title>
   </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
+
+  <div id="div_content">
+    <div id="div_top">
+      <!--logo-->
+      <div id="logo_div">
+        <img id="logo_img" src="assets/img/about/img_logo_about.png">
+      </div>
+
+      <div id="version_div">
+        <span>1.2.14</span>
+      </div>
+
+      <div id="site_address_div">
+        <a href="http://www.sengled.com">http://www.sengled.com</a>
+      </div>
+
+
+    </div>
+
+
+
+
+    <div class="list">
+
+      <button ion-item>
+        <ion-icon name="ios-arrow-forward" item-right></ion-icon>
+        User Manual
+      </button>
+
+      <button ion-item>
+        <ion-icon name="ios-arrow-forward" item-right></ion-icon>
+        App Update
+      </button>
+
+      <button ion-item>
+        <ion-icon name="ios-arrow-forward" item-right></ion-icon>
+        FirmWare Update
+      </button>
+    </div>
+
+
+  </div>
+
+
+
+
+
 
 </ion-content>
