--- a/ionic/snap/src/pages/help/help.html
+++ b/ionic/snap/src/pages/help/help.html
@@ -10,20 +10,20 @@
 
 <ion-content padding>
 
-  <div>
-    <p>
-      Follow along on the tutorial section of the Ionic docs!
-    </p>
-    <img src="">
-  </div>
-  <h3>Welcome to your first Ionic app!</h3>
+  <div class="list">
 
-  <p>
-    This starter project is our way of helping you get a functional app running in record time.
-  </p>
-  
-  <p>
-    <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>
+    <button ion-item>
+      <ion-icon name="ios-arrow-forward" item-right></ion-icon>
+      How to use your Snap
+    </button>
+
+
+
+
+
+  </div>
+
+
+
 
 </ion-content>
