#网页#kylinhuang #相册口

--- a/网页/kylinhuang/Photo_Family.html
+++ b/网页/kylinhuang/Photo_Family.html
@@ -106,13 +106,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="welcome-top" onclick="photo(1)">
                 <div class="col-md-6 welcome-left">
                     <div class="view view-tenth">
-                        <a href="singlepage.html" target="_blank">
+                        <a href="http://www.kylinhuang.cn/photo/" target="_blank">
                             <div class="inner_content clearfix">
                                 <div class="product_image">
-                                    <img src="http://www.kylinhuang.cn/image/p4.jpeg" class="img-responsive of-my" alt=""/>
+                                    <img src="http://www.kylinhuang.cn/image/xinli_cheongsam/WechatIMG81.jpeg" class="img-responsive of-my" alt=""/>
                                     <div class="mask" >
-                                        <h4>Hand made design</h4>
-                                        <p>Proin gravida nibh vquis bibendum auct, nec sagittis sem nibh id elit. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin</p>
+                                        <h4>Chen Xinli</h4>
+                                        <p>Art photo - cheongsam equipment</p>
                                         <h5>Continue reading...</h5>
                                     </div>
                                 </div>
