--- a/网页/kylinhuang/index.html
+++ b/网页/kylinhuang/index.html
@@ -81,6 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="head-nav" id="head-nav3">
 				<ul >
 					<li><a href="Photo_Family.html">Family</a></li>
+					<li><a href="Photo_Friend.html">Friend</a></li>
 					<li><a href="#">Museum</a></li>
 				</ul>
 			</div>
