--- a/网页/kylinhuang/Photo_Friend.html
+++ b/网页/kylinhuang/Photo_Friend.html
@@ -16,10 +16,14 @@
     <!--<script src="js/jquery.min.js"></script>-->
 
 
-
     <link href='http://fonts.useso.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+
+    <link href="css/photo_friend.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Archive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
@@ -85,8 +89,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h4 class="Photo" onclick="menuTab(3)">Photo</h4>
             <div class="head-nav" id="head-nav3">
                 <ul >
-                    <li class="active"><a href="Photo_Family.html">Family</a></li>
-                    <li><a href="Photo_Friend.html">Friend</a></li>
+                    <li ><a href="Photo_Family.html">Family</a></li>
+                    <li class="active"><a href="Photo_Friend.html">Friend</a></li>
                     <li><a href="#">Museum</a></li>
                 </ul>
             </div>
@@ -102,74 +106,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
 
+
+
         <div class="col-md-9 top-right">
-            <h2> Photo </h2>
-
-            <div class="welcome-top" onclick="photo(1)">
-                <!--<div class="col-md-6 welcome-left">-->
-                    <!--<div class="view view-tenth">-->
-                        <!--<a href="http://www.kylinhuang.cn/photo/" target="_blank">-->
-                            <!--<div class="inner_content clearfix">-->
-                                <!--<div class="product_image">-->
-                                    <!--<img src="images/img4.jpg" class="img-responsive of-my" alt=""/>-->
-                                    <!--<div class="mask" >-->
-                                        <!--<h4>Chen Xinli</h4>-->
-                                        <!--<p>Art photo - cheongsam equipment</p>-->
-                                        <!--<h5>Continue reading...</h5>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</a>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <div class="col-md-6 welcome-right">
-                    <div class="view view-tenth">
-                        <a href="singlepage.html">
-                            <div class="inner_content clearfix">
-                                <div class="product_image">
-                                    <img src="images/img4.jpg" class="img-responsive of-my" alt=""/>
-                                    <div class="mask" >
-                                        <h4>Hand made design</h4>
-                                        <p>Proin gravida nibh vel velinsequat ipsum, nec sagittis sem nibh id elit. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin</p>
-                                        <h5>Continue reading...</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-md-6 welcome-right">
-                    <div class="view view-tenth">
-                        <a href="singlepage.html">
-                            <div class="inner_content clearfix">
-                                <div class="product_image">
-                                    <img src="images/img4.jpg" class="img-responsive of-my" alt=""/>
-                                    <div class="mask" >
-                                        <h4>Hand made design</h4>
-                                        <p>Proin gravida nibh vel velinsequat ipsum, nec sagittis sem nibh id elit. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin</p>
-                                        <h5>Continue reading...</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-
-
 
             <div class="leftDiv2">
-                <h2> Video </h2>
+                <h2> Photo </h2>
                 <ul>
+
+                    
                     <li>
                         <div>
-
-                            <video src="/i/movie.ogg" controls="controls">
-                                your browser does not support the video tag
-                            </video>
-                            <h4> sister </h4>
+                            <!--<h4> sister </h4>-->
                             <!--<p>Activity</p>-->
                         </div>
 
