--- a/网页/index.html
+++ b/网页/index.html
@@ -33,6 +33,13 @@
             <li><a href="#"> nodejs </a></li>
         </ul>
 
+        <h1>测试app</h1>
+        <ul>
+            <li>
+                <a href="http://www.kylinhuang.cn/app/sengledSnap-release_1.2.35.2.apk"> 
+                    Snap播放器V2测试app </a>
+            </li>
+        </ul>
 
     </div>
 
